[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/RegularWhite.fnt" type="BitmapFont" id=1]
[ext_resource path="res://Fonts/MicroWhite.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Reward/ChoicePopup.gd" type="Script" id=3]
[ext_resource path="res://Reward/RewardDomino.tscn" type="PackedScene" id=4]
[ext_resource path="res://Battlers/Animations/fade_in_reward.tres" type="Animation" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 5
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/fade_in_reward = ExtResource( 5 )

[node name="PopupNode2D" type="Node2D" parent="Control"]

[node name="ColorRect" type="ColorRect" parent="Control/PopupNode2D"]
margin_left = 200.0
margin_right = 400.0
margin_bottom = 266.0
rect_min_size = Vector2( 200, 266 )
color = Color( 0.537255, 0.356863, 0.65098, 1 )

[node name="Title" type="Label" parent="Control/PopupNode2D"]
margin_left = 200.0
margin_top = 4.0
margin_right = 400.0
margin_bottom = 28.0
rect_min_size = Vector2( 180, 24 )
custom_fonts/font = ExtResource( 1 )
text = "Challenge"
align = 1

[node name="Description" type="Label" parent="Control/PopupNode2D"]
margin_left = 210.0
margin_top = 36.0
margin_right = 390.0
margin_bottom = 216.0
rect_min_size = Vector2( 140, 180 )
custom_fonts/font = ExtResource( 2 )
text = "Give the enemy double health and gain an extra reward at the end of battle"
align = 1
valign = 1
autowrap = true

[node name="YesButton" type="Button" parent="Control/PopupNode2D"]
margin_left = 224.0
margin_top = 235.0
margin_right = 284.0
margin_bottom = 259.0
rect_min_size = Vector2( 60, 24 )
custom_fonts/font = ExtResource( 2 )
text = "Yes"

[node name="NoButton" type="Button" parent="Control/PopupNode2D"]
margin_left = 316.0
margin_top = 235.0
margin_right = 376.0
margin_bottom = 259.0
rect_min_size = Vector2( 60, 24 )
custom_fonts/font = ExtResource( 2 )
text = "No"

[node name="Node2D" parent="Control" instance=ExtResource( 4 )]

[connection signal="pressed" from="Control/PopupNode2D/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Control/PopupNode2D/NoButton" to="." method="_on_NoButton_pressed"]
